--- a/Adventour.html
+++ b/Adventour.html
@@ -30,7 +30,9 @@
       display: flex;
       justify-content: space-between;
       padding-top: 100px;
-      padding-bottom: 100px;
+      padding-bottom: 200px;
+      width: 90%;
+      margin: auto;
     }
     #left {
       width: 40%;
@@ -51,6 +53,9 @@
       font-size: 25px;
       padding: 10px;
       border: solid black;
+      padding-bottom: 100px;
+      width: 90%;
+      margin: auto;
     }
 
     #nav > div {
@@ -217,42 +222,51 @@
     h3 {
       color: white;
     }
+    a {
+      color: white;
+      text-decoration: none;
+    }
   </style>
   <body>
-    <div id="cont">
-      <div id="nav">
-        <div>
-          <a href="./find.html"><h3>Adventour.</h3></a>
-        </div>
+    <div id="nav">
+      <div>
+        <a href="./Adventour.html"><h3>Adventour.</h3></a>
+      </div>
 
-        <div>
-          <a href="./Discover.html"><h3>Discover</h3></a>
-          <a href="./Services.html"><h3>Services</h3></a>
-          <a href="./Categorie.html"><h3>Categorie</h3></a>
-          <a href="./About.html"><h3>About Us</h3></a>
-          <a href="./Started.html"><h3>Get Started</h3></a>
+      <div>
+        <a href="./Discover.html"><h3>Discover</h3></a>
+        <a href="./Services.html"><h3>Services</h3></a>
+        <a href="./Categorie.html"><h3>Categorie</h3></a>
+        <a href="./About.html"><h3>About Us</h3></a>
+        <a href="./Started.html"><h3>Get Started</h3></a>
+      </div>
+    </div>
+    <div id="up">
+      <div id="left">
+        <p>All you need is Adventour.</p>
+        <h1>Let's Enjoy Your Life, Explore Beutiful</h1>
+        <h1><a href="./place.html">Places.</a></h1>
+        <p>
+          We aretravel agency giving your marvelous experience. So, get your
+          ticket with low price to your favourite destination.
+        </p>
+        <div id="date">
+          <a
+            href=" https://www.google.com/maps/@27.1381927,80.8593041,7z?entry=ttu"
+          >
+            <h2>Location</h2></a
+          >
+
+          <h2>Calander</h2>
         </div>
       </div>
-      <div id="up">
-        <div id="left">
-          <p>All you need is Adventour.</p>
-          <h1>Let's Enjoy Your Life, Explore Beutiful</h1>
-          <h1>Places.</h1>
-          <p>
-            We aretravel agency giving your marvelous experience. So, get your
-            ticket with low price to your favourite destination.
-          </p>
-          <div id="date">
-            <h2>Location</h2>
-            <h2>Calander</h2>
-          </div>
-        </div>
-        <div id="right">
-          <img
-            src="https://media.licdn.com/dms/image/C5603AQEroDHX_sIxzg/profile-displayphoto-shrink_400_400/0/1631727788840?e=1692230400&v=beta&t=z617pQRTYcqNdkBDiwuoJCOnUI3qBvs729HIqXOAE5g"
-          />
-        </div>
+      <div id="right">
+        <img
+          src="https://media.licdn.com/dms/image/C5603AQEroDHX_sIxzg/profile-displayphoto-shrink_400_400/0/1631727788840?e=1692230400&v=beta&t=z617pQRTYcqNdkBDiwuoJCOnUI3qBvs729HIqXOAE5g"
+        />
       </div>
+    </div>
+    <div id="cont">
       <p>Top Destination</p>
       <div id="mid">
         <div>
@@ -263,32 +277,7 @@
           <button>></button>
         </div>
       </div>
-      <div id="photo">
-        <div>
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSl4Wo_qcxNUakPQILgT0IcHbDNqpDkBIyqsQ&usqp=CAU"
-          />
-          <h3>7 Days Bali and Gili Islands Epid Experience</h3>
-          <p>Bali, Indonasia</p>
-          <h2>$35/person</h2>
-        </div>
-        <div>
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSl4Wo_qcxNUakPQILgT0IcHbDNqpDkBIyqsQ&usqp=CAU"
-          />
-          <h3>7 Days Bali and Gili Islands Epid Experience</h3>
-          <p>Bali, Indonasia</p>
-          <h2>$35/person</h2>
-        </div>
-        <div>
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSl4Wo_qcxNUakPQILgT0IcHbDNqpDkBIyqsQ&usqp=CAU"
-          />
-          <h3>7 Days Bali and Gili Islands Epid Experience</h3>
-          <p>Bali, Indonasia</p>
-          <h2>$35/person</h2>
-        </div>
-      </div>
+      <div id="photo"></div>
     </div>
     <div id="cont2">
       <div id="book">
@@ -308,10 +297,12 @@
           <p>Sed ut perspiciats unde omnis iste natus.</p>
         </div>
         <div id="two">
-          <img
-            src="https://cdn.dribbble.com/users/8689057/avatars/small/ec04f5d4caa3824816339ece1bf074a3.png?1673421779"
-          />
-          <p>Easy to buy Tickets</p>
+         
+           <a href="best.html">
+            <img  src="https://cdn.dribbble.com/users/8689057/avatars/small/ec04f5d4caa3824816339ece1bf074a3.png?1673421779"
+             alt="Description of the image">
+          </a>
+          <p>Best Tour Guide</p>
           <p>Sed ut perspiciats unde omnis iste natus.</p>
         </div>
         <div id="three">
@@ -423,7 +414,7 @@
         <h1>Get Started With Adventour!</h1>
       </div>
       <div>
-        <button>Get Start ></button>
+        <button><a href="./Started.html">Get Started</a></button>
       </div>
     </div>
     <hr />
@@ -435,11 +426,13 @@
           placerat nisi, adipiscing mauris non purus parturient.
         </p>
         <div id="social">
-          <p>Facebook</p>
+          <a href="https://www.facebook.com/"> <p>Facebook</p></a>
           <p>.</p>
-          <p>Instagram</p>
+
+          <a href="https://www.instagram.com/"> <p>Instagram</p></a>
           <p>.</p>
-          <p>Youtube</p>
+
+          <a href="https://www.youtube.com/@AdvenTourTravel"> <p>Youtube</p></a>
         </div>
       </div>
 
@@ -447,29 +440,33 @@
         <table>
           <thead>
             <tr>
-              <td>Sitemap</td>
-              <td>Company</td>
-              <td>Support</td>
+              <td><a href="./site.html">Sitemap</a></td>
+              <td><a href="./company.html">Company</a></td>
+              <td><a href="./support.html">Support</a></td>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>Services</td>
-              <td>Carrers</td>
+              <td><a href="./Services.html">Services</a></td>
+
+              <td><a href="./carrer.html">Carrers</a></td>
               <td>Tower A, Block-C Cempaka, Jakarta=3409</td>
             </tr>
             <tr>
-              <td>About Us</td>
-              <td>Our Team</td>
+              <td><a href="./About.html">About US</a></td>
+
+              <td><a href="./ourteam.html">Our Team</a></td>
               <td></td>
             </tr>
             <tr>
-              <td>Booking</td>
+              <td><a href="./book.html">Booking</a></td>
               <td></td>
+
               <td>Adeventour@gmail.com (002) +62 243 543</td>
             </tr>
             <tr>
-              <td>Cancellation</td>
+              <td><a href="./cancel.html">Cancellation</a></td>
+
               <td></td>
               <td></td>
             </tr>
@@ -481,10 +478,14 @@
     <div id="finish">
       <div>2022 Adventour All Right Resserved</div>
       <div id="policy">
-        <p>Terms & Condition</p>
-        <p>Privacy</p>
-        <p>Policy</p>
+        <a href="./term.html"> <p>Terms & Condition</p></a>
+
+        <a href="https://www.facebook.com/"> <p>Policy</p></a>
+
+        <a href="https://www.facebook.com/"> <p>Privacy</p></a>
       </div>
     </div>
   </body>
 </html>
+
+<script src="./home.js"></script>
