--- a/Adventour.html
+++ b/Adventour.html
@@ -7,19 +7,31 @@
   </head>
 
   <style>
+    @media only screen and (max-width: 767px) {
+      /* Styles for small screens (mobile devices) */
+    }
+    @media only screen and (min-width: 768px) and (max-width: 1023px) {
+      /* Styles for medium screens (tablets and small laptops) */
+    }
+    @media only screen and (min-width: 1024px) {
+      /* Styles for large screens (desktops and large laptops) */
+    }
     body {
-      background-color: rgb(9, 8, 23);
+      background-color: hsl(0, 0%, 10%);
+
       color: white;
     }
     #cont {
       width: 80%;
       margin: auto;
       padding-bottom: 100px;
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
     }
     #cont2 {
       width: 80%;
       margin: auto;
       padding-top: 100px;
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
     }
     #last {
       width: 80%;
@@ -31,7 +43,7 @@
       justify-content: space-between;
       padding-top: 100px;
       padding-bottom: 200px;
-      width: 90%;
+      width: 80%;
       margin: auto;
     }
     #left {
@@ -45,6 +57,8 @@
 
     #right > img {
       width: 100%;
+      height: 700px;
+      box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
     }
     #nav {
       display: flex;
@@ -52,10 +66,11 @@
       align-items: center;
       font-size: 25px;
       padding: 10px;
-      border: solid black;
-      padding-bottom: 100px;
-      width: 90%;
+
+      padding-bottom: 50px;
+      width: 80%;
       margin: auto;
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
     }
 
     #nav > div {
@@ -76,20 +91,22 @@
       margin-right: 10px;
       color: #333;
       font-weight: bold;
+      box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
     }
     #date {
       display: flex;
       justify-content: space-between;
-      border: solid black;
     }
     #photo {
       width: 100%;
       display: flex;
       justify-content: space-between;
       font-size: 30px;
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
     }
     #photo > div {
       width: 30%;
+      box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
     }
     #photo img {
       width: 100%;
@@ -104,6 +121,7 @@
     #mid > h1 {
       font-size: 30px;
     }
+
     .btn {
       display: flex;
     }
@@ -112,6 +130,8 @@
       text-align: center;
       display: flex;
       justify-content: space-around;
+      display: flex;
+      background-color: hsl(0, 0%, 10%);
     }
     p {
       font-size: 30px;
@@ -121,7 +141,7 @@
       text-align: center;
       margin: auto;
       font-size: 30px;
-      border: solid black;
+
       padding-bottom: 100px;
     }
     #ticket {
@@ -133,6 +153,7 @@
     }
     #ticket > div {
       width: 20%;
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
     }
     #two {
       padding-top: 200px;
@@ -149,27 +170,32 @@
     #left1 {
       width: 40%;
       font-size: 30px;
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
     }
     #right1 {
       padding-top: 100px;
       width: 40%;
       font-size: 35px;
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
     }
 
     #left1 > img {
       width: 100%;
       height: 1000px;
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
     }
     #deal {
       display: flex;
       justify-content: space-between;
-      border: solid black;
+
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
     }
     .last {
       width: 80%;
       margin: auto;
       display: flex;
       justify-content: space-between;
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
       padding-bottom: 100px;
     }
     .last button {
@@ -240,6 +266,7 @@
       display: flex;
       overflow-x: scroll;
       scroll-behavior: smooth;
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
     }
 
     .photo-item {
@@ -247,6 +274,7 @@
       width: 300px;
       margin-right: 20px;
       padding: 20px;
+      box-shadow: 0px 0px 10px rgba(5, 5, 5, 0.5);
     }
 
     .photo-item img {
@@ -267,6 +295,7 @@
         <a href="./Started.html"><h3>Get Started</h3></a>
       </div>
     </div>
+    <hr />
     <div id="up">
       <div id="left">
         <p>All you need is Adventour.</p>
